--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Svalbard AIS map</title>
+    <title>Real-Time AIS Map</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
     <!-- Mapbox GL CSS & JS -->
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.10.0/mapbox-gl.css" rel="stylesheet">
@@ -51,10 +51,12 @@
         position: absolute;
         top: 10px;
         right: 10px;
+        /* Background removed */
         padding: 10px;
         border-radius: 4px;
         font-family: "Source Sans Pro", sans-serif;
         font-size: 12px;
+
         color: #ffffff;
         transition: opacity 0.3s ease-out;
       }
@@ -111,13 +113,10 @@
       </div>
     </div>
     
-    <!-- Load external configuration for sensitive keys.
-         Ensure that config.js is not tracked by git (added to .gitignore) -->
-    <script src="config.js"></script>
-    
     <script>
-      // Initialize Mapbox using the token loaded from our config file.
-      mapboxgl.accessToken = window.env.MAPBOX_ACCESS_TOKEN;
+      // Initialize Mapbox
+      mapboxgl.accessToken =
+        "pk.eyJ1IjoidmVnYXJkMTk5MCIsImEiOiJjamtsYXdjZm4wMWljM3ZxcmUyOHJoNnBwIn0.sCjF-dZIu4TN21N0GhmFdg";
       const map = new mapboxgl.Map({
         container: "map",
         style: "mapbox://styles/vegard1990/cm7dsvz6s00bk01r4aj1sgo63",
@@ -129,15 +128,15 @@
       map.setRenderWorldCopies(true);
       map.touchZoomRotate.disableRotation();
 
-      // Firebase configuration loaded from our config file.
+      // Firebase configuration
       const firebaseConfig = {
-        apiKey: window.env.FIREBASE_API_KEY,
-        authDomain: window.env.FIREBASE_AUTH_DOMAIN,
-        databaseURL: window.env.FIREBASE_DATABASE_URL,
-        projectId: window.env.FIREBASE_PROJECT_ID,
-        storageBucket: window.env.FIREBASE_STORAGE_BUCKET,
-        messagingSenderId: window.env.FIREBASE_MESSAGING_SENDER_ID,
-        appId: window.env.FIREBASE_APP_ID
+        apiKey: "AIzaSyBeJVO19tjEOk3RmX2IcDtBX-RDe4GRK94",
+        authDomain: "svalbardships-517ab.firebaseapp.com",
+        databaseURL: "https://svalbardships-517ab-default-rtdb.europe-west1.firebasedatabase.app",
+        projectId: "svalbardships-517ab",
+        storageBucket: "svalbardships-517ab.firebasestorage.app",
+        messagingSenderId: "744978558688",
+        appId: "1:744978558688:web:987a97fd1981ee4423ea85"
       };
       firebase.initializeApp(firebaseConfig);
       const db = firebase.database();
@@ -417,11 +416,13 @@
         map.on("zoom", () => {
           const legend = document.getElementById("legend");
           const zoom = map.getZoom();
+          // Fully visible at zoom <= 4.5, fully hidden at zoom >= 5.5.
           if (zoom <= 4.5) {
             legend.style.opacity = 1;
           } else if (zoom >= 5.5) {
             legend.style.opacity = 0;
           } else {
+            // Linearly interpolate between 4.5 and 5.5.
             legend.style.opacity = 1 - (zoom - 4.5);
           }
         });
